--- a/style.css
+++ b/style.css
@@ -1,16 +1,73 @@
 * {
     padding: 0;
     margin: 0;
+    background-color: lightgray;
+}
+
+
+
+body {
+    height: 100vh;
+}
+
+
+
+
+
+/* HEADER NAVIGATION */
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 10%;
+    font-family: 'Roboto',
+        sans-serif;
+}
+
+.logo {
+    height: 80px;
+    cursor: pointer;
+}
+
+
+.nav-links li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 15px;
+    cursor: pointer;
+    justify-content: center;
+}
+
+.nav-links li {
+    transition: 0.3s ease 0s;
+}
+
+.nav-links li:hover {
+    color: red;
+}
+
+
+
+button {
+    cursor: pointer;
+    padding: 8px 20px;
+    border-radius: 6px;
+    border: 2px solid #000;
+    transition: 0.3s ease 0s;
+    font-weight: 800;
+}
+
+button:hover {
+    transition: 0.6s ease 0s;
+    background-color: rgba(255, 0, 0, 0.4);
 }
 
 .container {
     display: flex;
-    background-image: linear-gradient(-25deg, #616161 0%, #96B7C4 100%);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-
+    height: 75vh;
 }
 
 
@@ -28,7 +85,6 @@
 img {
     max-width: 200px;
     border-radius: 6px;
-    padding: 10px;
 }
 
 h3 {
@@ -39,26 +95,46 @@ h3 {
 
 }
 
-.CTA {
-    margin: 30px;
-    padding: 10px;
-    background-color: #B33030;
-    border: 2px solid black;
-    cursor: pointer;
+
+
+
+
+
+
+.fa-brands {
+    font-size: 24px;
+    padding: 0 10px 1em 10px;
+}
+
+
+
+/* FOOTER */
+
+footer {
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 10%;
     font-family: 'Roboto',
         sans-serif;
-    font-size: 1rem;
-    border-radius: 4px;
-    max-width: 200px;
-    color: #000;
-    text-decoration: none;
-
 }
 
-.CTA:hover {
-    transform: translateY(0) scale(1.1);
-    b
+.social {
+    margin: 0;
 }
 
 
-@media only screen and (max-width: 700px) {}
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 700px) {
+    .nav-links li {
+        display: block;
+    }
+}
