--- a/style.css
+++ b/style.css
@@ -30,22 +30,28 @@ header {
 }
 
 
+
 .nav-links li {
     list-style: none;
     display: inline-block;
     padding: 0 15px;
     cursor: pointer;
     justify-content: center;
+    transition: 0.3s ease 0s;
+    font-weight: bold;
+    border-right: 2px solid black;
 }
 
-.nav-links li {
-    transition: 0.3s ease 0s;
+.nav-links li:last-of-type {
+    border-right: none;
 }
+
 
 .nav-links li:hover {
     font-weight: 900;
     transform: scale(1.1);
-    color: rgba(255, 0, 0, 0.7)
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 
 button {
@@ -53,13 +59,18 @@ button {
     padding: 8px 20px;
     border-radius: 6px;
     border: 2px solid #000;
-    transition: 0.3s ease 0s;
     font-weight: 800;
+    -webkit-box-shadow: -5px 5px 0px 0px #000;
+    box-shadow: -5px 5px 0px 0px #000;
+
+    transition: 0.3s;
 }
 
 button:hover {
     transition: 0.6s ease 0s;
     background-color: rgba(255, 0, 0, 0.4);
+    -webkit-box-shadow: -5px 5px 0px 0px #000;
+    box-shadow: -5px 5px 0px 0px #000;
     transform: scale(1.1);
 }
 
