--- a/style.css
+++ b/style.css
@@ -159,8 +159,8 @@ footer {
     align-items: center;
 }
 
-@media only screen and (max-width: 700px) {
-    .nav-links li {
-        display: block;
+@media screen and (min-width: 780px) {
+
+    .nav-links {
+        display: none !important;
     }
-}
