--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ footer {
     align-items: center;
 }
 
-@media screen and (min-width: 780px) {
+@media screen and (max-width: 780px) {
 
     .nav-links {
         display: none !important;
